fixed table title overflow

--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -6,7 +6,7 @@
 }
 
 .MTableToolbar-title-9,
-.MuiToolbar-root:first-child {
+.jss9 {
   overflow: unset !important;
 }
 
